--- a/src/translations/zh-CN.json
+++ b/src/translations/zh-CN.json
@@ -8,5 +8,5 @@
   "Wrap with blue text": "包围成蓝色文字",
   "Remove formatting": "去除格式化",
   "This command can only be used when editing text": "该命令仅在编辑文字时可使用",
-  "Toggle toolbar display.": "切换工具条显示。"
+  "Toggle toolbar display": "切换工具条显示"
 }
