feat: update the default set of toolbar buttons

--- a/src/translations/zh-CN.json
+++ b/src/translations/zh-CN.json
@@ -1,11 +1,19 @@
 {
-  "Wrap with cloze": "包围成 cloze",
-  "Wrap with red highlight": "包围成红色高亮",
-  "Wrap with green highlight": "包围成绿色高亮",
-  "Wrap with blue highlight": "包围成蓝色高亮",
-  "Wrap with red text": "包围成红色文字",
-  "Wrap with green text": "包围成绿色文字",
-  "Wrap with blue text": "包围成蓝色文字",
+  "Page ref": "页面引用",
+  "Link": "超链接",
+  "Inline code": "行内代码",
+  "Bold": "粗体",
+  "Italic": "斜体",
+  "Strike through": "划线",
+  "Math expression": "数学表达式",
+  "Highlight": "高亮",
+  "Red highlight": "红色高亮",
+  "Green highlight": "绿色高亮",
+  "Blue highlight": "蓝色高亮",
+  "Red text": "红色文字",
+  "Green text": "绿色文字",
+  "Blue text": "蓝色文字",
+  "Hidden text": "隐藏文字",
   "Remove formatting": "去除格式化",
   "This command can only be used when editing text": "该命令仅在编辑文字时可使用",
   "Toggle toolbar display": "切换工具条显示"
