--- a/src/translations/zh-CN.json
+++ b/src/translations/zh-CN.json
@@ -2,6 +2,7 @@
   "Page ref": "页面引用",
   "Link": "超链接",
   "Inline code": "行内代码",
+  "Caption": "说明",
   "Bold": "粗体",
   "Italic": "斜体",
   "Strike through": "划线",
