feat: add underline styles

--- a/src/translations/zh-CN.json
+++ b/src/translations/zh-CN.json
@@ -15,6 +15,9 @@
   "Red text": "红色文字",
   "Green text": "绿色文字",
   "Blue text": "蓝色文字",
+  "Red underline": "红色下划线",
+  "Green underline": "绿色下划线",
+  "Blue underline": "蓝色下划线",
   "Hidden text": "隐藏文字",
   "Remove formatting": "去除格式化",
   "This command can only be used when editing text": "该命令仅在编辑文字时可使用",
